--- a/styles.css
+++ b/styles.css
@@ -2,42 +2,83 @@ body{
     height: 100vh;
     background-color: hsl(0, 0%, 8%);
     font-family: "Inter";
+    box-sizing: border-box;
 }
 
 
 main{
-    height: 500px;
+    height: 600px;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 450px;
-    background-color: hsl(0, 0%, 20%);
+    width: 400px;
+    background-color: hsl(0, 0%, 12%);
     border-radius: 5%;
 }
 
-.info{
+.info, .links{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-img{
-    border-radius: 50%;
-    height: 50%;
-    width: 50%;
+.links{
+    width: 80%;
 }
 
-h2{
+img{
+    border-radius: 50%;
+    height: 45%;
+    width: 45%;
+}
+
+h2, p{
     color: hsl(0, 0%, 100%);
 }
 
-h4{
+h2{
+   margin-bottom: 5px;
+}
+
+h5{
     color:hsl(75, 94%, 57%);
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+p{
+    margin-top:8px;
+}
+
+
+button{
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(0, 0%, 20%);
+    border: 1px solid;
+    border-color: hsl(0, 0%, 20%);
+    font-weight: 600;
+    width: 200px;
+    margin: 5px;
+    padding: 10px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+
+button:hover{
+    background-color: hsl(75, 94%, 57%);
+    color: hsl(0, 0%, 8%);
+    cursor: url('assets/images/icon.png'), auto;
+
 }
 
 @font-face {
     font-family: "Inter";
     src: url('assets/fonts/Inter-VariableFont_slnt\,wght.ttf');
 }
+
+footer{
+    color: white;
+} 
